made changes to the logic for getting the gnutella.net full path name, for getting the incomplete directory, and for getting the default save directory.  i decoupled the incomplete directory accessor from the setSaveDirectory method so that it no longer relies on getSaveDirectory succeeding.  i also made changes to some of the methods for setting boolean settings so that they use the built-in functionality of the Boolean class